{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "23de75a0-437f-4e67-96db-1c6d42c8f4f7",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "ed9f1e72-502e-4a4f-b561-2395cd68bfd8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "9e8f312d-84bc-4e89-b095-1d30e2d75eb7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "Button",
                    "id": "024e0973-3c7f-41d2-b331-e93204872bd3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "efb094f2-2678-4497-bdfa-35ef2ff99c64",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e8f18ee9-9e90-488b-abdb-60e06988b045",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e490d844-e611-459c-ae00-1bbdc190ccbc",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}